# llvm-project

clang/lib/ASTMatchers/Dynamic/: Registry.cpp
mlir/include/mlir/IR/: Matchers.h
mlir/include/mlir/Query/: Query.h  QueryParser.h  QuerySession.h
mlir/include/mlir/Query/Matcher/: Diagnostics.h  Marshallers.h  MatchFinder.h  MatchersInternal.h  Parser.h  Registry.h  RegistryMap.h  SourceLocation.h  VariantValue.h
mlir/include/mlir/Tools/mlir-query/: MlirQueryMain.h  Query.h  QuerySession.h
mlir/include/mlir/Tools/mlir-query/Matcher/: Marshallers.h  Parser.h  Registry.h  VariantValue.h
mlir/lib/Query/: Query.cpp  QueryParser.cpp  QueryParser.h
mlir/lib/Query/Matcher/: CMakeLists.txt  Diagnostics.cpp  Parser.cpp  Parser.h  Registry.cpp  Registry.h  RegistryManager.h  VariantValue.cpp
mlir/lib/Tools/: CMakeLists.txt
mlir/lib/Tools/mlir-query/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  ExtraMatchers.h  Lexer.cpp  Lexer.h  MLIRTypeTraits.h  Marshallers.h  MatcherDiagnostics.cpp  MatcherDiagnostics.h  MatcherParser.cpp  MatcherParser.h  MatcherRegistry.cpp  MatcherRegistry.h  MatcherTypeTraits.h  MatcherVariantValue.cpp  MatcherVariantValue.h  MatchersInternal.h  MlirQueryMain.cpp  Parser.cpp  Parser.h  Parser2.cpp  Parser2.h  Query.cpp  Query.h  QueryParser.cpp  QueryParser.h  QuerySession.h  Registry.cpp  Registry.h  VariantValue.cpp  VariantValue.h
mlir/lib/Tools/mlir-query/Matcher/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  Marshallers.h  MatchersInternal.h  Parser.cpp  Parser.h  Registry.cpp  Registry.h  VariantValue.cpp  VariantValue.h
mlir/lib/Tools/mlir-query/Tool/: CMakeLists.txt  MlirQueryMain.cpp
mlir/lib/Tools/mlir-query/tool/: CMakeLists.txt
mlir/test/IR/: test-matchers.mlir
mlir/test/lib/IR/: TestMatchers.cpp
mlir/tools/mlir-query/: CMakeLists.txt  mlir-query.cpp
